--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,13 @@
+.app-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.app-content {
+  flex: 1;
+}
+
 * {
   margin: 0;
   padding: 0;
